# aios

./: .env.example  .gitignore  CLAUDE.md  ENTERPRISE_REVIEW_PACK.md  KNOWLEDGE_LAYER_SPEC.md  LICENSE  README.md  SESSION_NOTES.md  pyproject.toml  requirements.txt  run_api.py
.claude/: settings.local.json
data/: agents.json  governance_policies.json
docs/: AIOS_BUILD_SPEC.md  AIOS_MASTER_STRATEGY.md  AIOS_TECHNICAL_ROADMAP.md  ARCHITECTURE_REVIEW_SUMMARY.md  AUDITABILITY_AND_MULTITENANCY.md  AUDITABILITY_QUICK_REFERENCE.md  CGI_DEPLOYMENT_GUIDE.md  CODE_CHANGES_RECOMMENDATION.md  CROSS_DEPARTMENT_CONTINUITY.md  DEPLOYMENT_TEMPLATES.md  DEVELOPER_HANDOFF.md  ENTERPRISE_DISCOVERY_ARCHITECTURE.md  ENTERPRISE_HARDENING_STRATEGY.md  EXECUTIVE_SUMMARY.md  GOVERNANCE_ARCHITECTURE.md  GOVERNANCE_FAQ.md  GOVERNANCE_STRENGTHENING.md  GROUNDED_AI.md  HAAIS_AIOS_OVERVIEW.md  HITL_EXECUTION_ANALYSIS.md  HITL_QUICK_REFERENCE.md  IMPLEMENTATION_STATUS.md  INDEX.md  LLM_INTEGRATION_GUIDE.md  LLM_ORCHESTRATION_LAYER.md  ONBOARDING_SPEC.md  OPERATIONS_MANUAL.md  PHOENIX_OVERVIEW.md  QUICK_START_UI.md  RELIABILITY_AND_ENTERPRISE_READINESS.md  RELIABILITY_QUICK_REFERENCE.md  ROUTING_ARCHITECTURE.md  SUMMARY_UI_AND_GOVERNANCE.md  TENANCY_MODEL.md  TWO_TIER_GOVERNANCE_IMPLEMENTATION.md  TWO_TIER_GOVERNANCE_SUMMARY.md  UI_DEVELOPMENT_GUIDE.md  USER_MANUAL.md
migrations/: 001_enable_rls.sql  002_immutable_audit.sql
scripts/: certify_enterprise.py  import_cleveland_data.py
sql/: knowledge-layer-schema.sql
tests/: test_api.py  test_concierge.py  test_enterprise_security.py  (+4 more)
(+52 files in other folders)
