[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","B","UP","N","A","C4","SIM","RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: mark test as async",
]

[project.scripts]
certify-enterprise = "scripts.certify_enterprise:main"

[project]
name = "haais-aios"
version = "1.0.0"
description = "HAAIS AI Operating System for Enterprise & Government"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
